2012-05-15  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/ieee754/dbl-64/wordsize-64/e_log10.c: New file.
	* sysdeps/ieee754/dbl-64/wordsize-64/e_log2.c: New file.
	* sysdeps/ieee754/dbl-64/e_log2.c: Fixing indents.
	* sysdeps/ieee754/dbl-64/e_log10.c: Likewise and also
	remove unused global constant.

2012-05-15  Chris Metcalf  <cmetcalf@tilera.com>

	* sysdeps/unix/sysv/linux/getsysstats.c: Remove duplicate
	include of <not-cancel.h>.

2012-05-15  Roland McGrath  <roland@hack.frob.com>

	* nscd/nscd-client.h (__nscd_acquire_maplock): Fix formatting.

2012-05-15  Jeff Law  <law@redhat.com>
	    Andreas Jaeger  <aj@suse.de>

	[BZ #13594]
	* nscd/nscd-client.h (__nscd_acquire_maplock): New function, split
	out from...
	* nscd/nscd_helper.c (__nscd_get_map_ref): ... here.
	* nscd/nscd-client.h: Add __nscd_acquire_maplock.
	* nscd/nscd_gethst_r.c (__nscd_get_nl_timestamp): Add locking to
	code changing __hst_map_handle.map.

2012-05-15  Roland McGrath  <roland@hack.frob.com>

	* configure.in (sysnames): Look for Implies-before and Implies-after
	files.
	* configure: Regenerated.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/sigaction.c (RESTORE2): Replace
	8-byte data alignment with LP_SIZE alignment.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/clone.S: Load pointer to TID
	into R10_LP.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/x32/dl-cache.h: New.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/x86_64/x32/Makefile: New file.
	* sysdeps/unix/sysv/linux/x86_64/x32/getcpu.c: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/sched_getcpu-static.c:
	Likewise.
	* sysdeps/unix/sysv/linux/x86_64/x32/sched_getcpu.S: Likewise.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/stackinfo.h (stackinfo_get_sp): Use RSP_LP.
	(stackinfo_sub_sp): Likewise.

2012-05-15  H.J. Lu  <hongjiu.lu@intel.com>
